# cocuyo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: build_and_test.yml  release.yml
assets/macos/: Info.plist
crates/core/: Cargo.toml
crates/core/src/: errors.rs  frame.rs  lib.rs  linux.rs  macos.rs  recording.rs  recording_driver.rs  windows.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs  stream.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: lib.rs  metal_import.rs  recording.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: dx12_import.rs  held_frame.rs  lib.rs  recording.rs
crates/platform/linux/: Cargo.toml
crates/platform/linux/src/: dmabuf_frame.rs  dmabuf_read.rs  lib.rs  recording.rs  stream.rs  vulkan_dmabuf.rs
crates/platform/macos/: Cargo.toml
crates/platform/macos/src/: iosurface_frame.rs  recording.rs
crates/platform/windows/: Cargo.toml
crates/platform/windows/src/: held_frame.rs  lib.rs  recording.rs
crates/sampling/: Cargo.toml
crates/sampling/src/: average.rs  frame_import.rs  gpu.rs  lib.rs  region.rs
src/: adapters.rs  ambient.rs  app.rs  bulb_setup.rs  config.rs  dmabuf_handler.rs  formats.rs  frame.rs  gpu_context.rs  gst_pipeline.rs  main.rs  perf_stats.rs  recording.rs  region.rs  sampling.rs  stream.rs  texture_format.rs  theme.rs  tray.rs  ui.rs  vulkan_dmabuf.rs  widget.rs
src/lighting/: mod.rs  wiz.rs
src/platform/linux/: dmabuf_handler.rs  formats.rs  gst_pipeline.rs  mod.rs  recording.rs  stream.rs  vulkan_dmabuf.rs
src/platform/macos/: metal_import.rs  mod.rs  recording.rs
src/platform/windows/: capture_target.rs  dx12_import.rs  mod.rs  recording.rs  shared_texture.rs
src/sampling/: average.rs  gpu.rs  gpu_average.wgsl  gpu_palette.wgsl  max.rs  min.rs  mod.rs  palette.rs
src/screen/: bulb_setup.rs  capture_picker.rs  light_setup.rs  main_window.rs  mod.rs  preview.rs  profile_dialog.rs  region_overlay.rs  settings.rs  title_bar.rs  video_shader.rs
src/widget/: mod.rs  perf_hud.rs  region_overlay.rs  title_bar.rs  video_shader.rs  video_shader.wgsl
