[package]
name = "cocuyo"
version = "0.4.3"
edition = "2024"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
iced = { git = "https://github.com/jorgeajimenezl/iced.git", rev = "235d4ed77d36e9db99ac117ce23fcf5332d90314", default-features = false, features = ["wgpu", "tokio", "image", "advanced", "canvas"] }
wgpu = "27"
wgpu-types = { version = "27", features = ["serde"] }
tokio = { version = "1.41", features = [ "rt-multi-thread", "macros" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
wiz-lights-rs = "0.2"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
dirs = "6.0.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"
ashpd = { version = "0.12.2", default-features = true, features = [ "pipewire", "wayland" ] }
drm-fourcc = "2.2"
gstreamer = "0.23"
gstreamer-allocators = { version = "0.23", features = ["v1_16"] }
gstreamer-app = "0.23"
gstreamer-video = "0.23"
iced = { git = "https://github.com/jorgeajimenezl/iced.git", rev = "235d4ed77d36e9db99ac117ce23fcf5332d90314", features = ["wayland"] }
nix = { version = "0.29", features = ["fs", "mman", "ioctl"] }
wgpu-hal = { version = "27", features = ["vulkan"] }
pipewire = { version = "0.8", features = ["v0_3_77"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = { git = "https://github.com/jorgeajimenezl/windows-capture.git", rev = "2191b793f74052f6353db901394cc230cb08d6e1" }
windows = { version = "0.58", features = [
    "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common", "Win32_Foundation",
    "Win32_System_Console",
] }
wgpu-hal = { version = "27", features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5.3", features = ["async", "macos_14_0"] }
wgpu-hal = { version = "27", features = ["metal"] }
metal = "0.32"
objc2 = "0.6.4"
foreign-types = "0.5"
