[workspace]
members = [".", "crates/core", "crates/sampling", "crates/platform/windows", "crates/platform/linux", "crates/platform/macos"]
resolver = "3"

[workspace.package]
version = "0.5.3"
edition = "2024"

[workspace.dependencies]
wgpu = { version = "28", default-features = false, features = ["std", "wgsl"] }
wgpu-types = { version = "28", default-features = false, features = ["serde"] }
iced = { git = "https://github.com/jorgeajimenezl/iced.git", rev = "034bf587e626b80112fa41c7309c2cbf79c306a8", default-features = false, features = ["wgpu", "tokio", "image", "advanced", "canvas"] }
tokio = { version = "1.41", default-features = false, features = [ "rt-multi-thread", "macros", "sync", "time" ] }
tracing = "0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
drm-fourcc = "2.2"
ash = "0.38"
ashpd = { version = "0.13", default-features = true, features = [ "pipewire", "wayland", "screencast" ] }
gstreamer = "0.23"
gstreamer-allocators = { version = "0.23", features = ["v1_16"] }
gstreamer-app = "0.23"
gstreamer-video = "0.23"
nix = { version = "0.29", default-features = false, features = ["fs", "mman", "ioctl"] }
wgpu-hal = { version = "28", default-features = false }
pipewire = { version = "0.9", features = ["v0_3_77"] }
windows-capture = { git = "https://github.com/jorgeajimenezl/windows-capture.git", rev = "2191b793f74052f6353db901394cc230cb08d6e1" }
windows = { version = "0.62.2" }
screencapturekit = { version = "1.5.3", features = ["async", "macos_14_0"] }
metal = "0.33"
objc2 = "0.6.4"
foreign-types = "0.5"

[package]
name = "cocuyo"
version.workspace = true
edition.workspace = true

[features]
default = []
tray = ["dep:tray-icon"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# [profile.release-fast]
# inherits = "release"
# lto = "thin"
# codegen-units = 16

# [profile.dev.package."*"]
# opt-level = 1

[dependencies]
cocuyo-core = { path = "crates/core" }
cocuyo-sampling = { path = "crates/sampling" }
iced.workspace = true
wgpu.workspace = true
wgpu-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck.workspace = true
wiz-lights-rs = "0.2"
futures.workspace = true
serde.workspace = true
toml = "1.0.3"
dirs = "6.0.0"
tray-icon = { version = "0.19", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
cocuyo-platform-linux = { path = "crates/platform/linux" }
gstreamer.workspace = true
pipewire.workspace = true
iced = { workspace = true, features = ["wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
cocuyo-platform-windows = { path = "crates/platform/windows" }
windows-capture = { workspace = true }
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Console",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocuyo-platform-macos = { path = "crates/platform/macos" }

[build-dependencies]
resvg = "0.45"
ico = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[lints]
workspace = true

[workspace.lints.clippy]
type-complexity = "allow"